# AMA-UCF

./: .env.example  .gitignore  AMAapp.py  AMAgoogleCalendar.py  AMAgoogleSheets.py  LICENSE.md  ProcessCalendar.py  README.md  __init__.py  config.py  configStore.py  main.py  pyproject.toml  routes.py  sync_log.csv
.github/workflows/: ci.yml  sync.yml
ama_ucf/: __init__.py  analytics.py  audit.py  calendar.py  config.py  scripts.py  sheets.py  utils.py
src/: __init__.py  analytics.py  audit.py  calendar.py  config.py  sheets.py  utils.py
static/: main.css
templates/: SettingForm.html  gem.html
tests/: test_analytics.py  test_sheets.py
