[project]
name = "ama-ucf"
version = "0.1.0"
description = "From a Google Sheet to a Google Calendar, design Analytics AMA Calendar Sync Tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ama_ucf*"]
